...
                        android:hint="@string/prompt_firstName"
                        app:layout_constraintEnd_toStartOf="@id/inputLayout_lastName"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/inputLayout_verify_password">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_firstName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="@{safeUnbox(userViewModel.contentEnabled)}"
                            android:inputType="textPersonName"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>
...
                        android:hint="@string/prompt_lastName"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/inputLayout_firstName"
                        app:layout_constraintTop_toBottomOf="@id/inputLayout_verify_password">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_lastName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="@{safeUnbox(userViewModel.contentEnabled)}"
                            android:inputType="textPersonName"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>
...
                        android:hint="@string/prompt_street"
                        app:layout_constraintEnd_toStartOf="@id/inputLayout_streetNumber"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/inputLayout_birthday">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_street"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="@{safeUnbox(userViewModel.contentEnabled)}"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>
...
                        android:hint="@string/prompt_streetNumber"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/inputLayout_street"
                        app:layout_constraintTop_toBottomOf="@+id/inputLayout_birthday">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_streetNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="@{safeUnbox(userViewModel.contentEnabled)}"
                            android:inputType="number"
                            android:singleLine="true" />

...
                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/button_editProfile"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginStart="@dimen/default_horizontal_margin"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="@dimen/default_horizontal_margin"
                android:layout_marginBottom="@dimen/default_vertical_margin"
...
