<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="orderViewModel"
            type="be.scoutswondelgem.wafelbak.viewmodels.OrderViewModel"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            tools:context=".ui.CreateOrderFragment" tools:ignore="ScrollViewSize">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" android:layout_marginEnd="8dp" android:id="@+id/loading"
                android:visibility="@{safeUnbox(orderViewModel.loadingVisibility)}">
                <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/default_horizontal_margin"
                app:cardCornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/amountOfWafflesLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/default_horizontal_margin"
                        android:layout_marginTop="@dimen/default_vertical_margin"
                        android:text="@string/amountOfWaffles"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.chip.ChipGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/amountOfWafflesGroup"
                        android:layout_marginStart="@dimen/default_horizontal_margin"
                        android:layout_marginEnd="@dimen/default_horizontal_margin"
                        android:layout_marginTop="@dimen/default_vertical_margin"
                        app:singleSelection="true"
                        app:checkedChip="@id/twoWaffles"
                        app:chipSpacingHorizontal="@dimen/default_horizontal_margin"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/amountOfWafflesLabel"
                        >
                        <com.google.android.material.chip.Chip
                            android:id="@+id/twoWaffles"
                            android:text="@string/twoWaffles"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:enabled="@{safeUnbox(orderViewModel.contentEnabled)}"
                            style="@style/Widget.MaterialComponents.Chip.Filter"/>
                        <com.google.android.material.chip.Chip
                            android:id="@+id/fourWaffles"
                            android:text="@string/fourWaffles"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:enabled="@{safeUnbox(orderViewModel.contentEnabled)}"
                            style="@style/Widget.MaterialComponents.Chip.Filter"/>
                        <com.google.android.material.chip.Chip
                            android:id="@+id/sixWaffles"
                            android:text="@string/sixWaffles"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:enabled="@{safeUnbox(orderViewModel.contentEnabled)}"
                            style="@style/Widget.MaterialComponents.Chip.Filter"/>
                        <com.google.android.material.chip.Chip
                            android:id="@+id/eightWaffles"
                            android:text="@string/eightWaffles"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:enabled="@{safeUnbox(orderViewModel.contentEnabled)}"
                            style="@style/Widget.MaterialComponents.Chip.Filter"/>
                        <com.google.android.material.chip.Chip
                            android:id="@+id/twelveWaffles"
                            android:text="@string/twelveWaffles"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:enabled="@{safeUnbox(orderViewModel.contentEnabled)}"
                            style="@style/Widget.MaterialComponents.Chip.Filter"/>
                        <com.google.android.material.chip.Chip
                            android:id="@+id/twentyWaffles"
                            android:text="@string/twentyWaffles"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:enabled="@{safeUnbox(orderViewModel.contentEnabled)}"
                            style="@style/Widget.MaterialComponents.Chip.Filter"/>

                    </com.google.android.material.chip.ChipGroup>

                    <TextView
                        android:id="@+id/desiredDeliveryTimeLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/default_horizontal_margin"
                        android:layout_marginTop="@dimen/default_vertical_margin"
                        android:text="@string/desiredDeliveryTime"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/amountOfWafflesGroup" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/desiredDeliveryTimeGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/default_horizontal_margin"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="@dimen/default_horizontal_margin"
                        app:checkedChip="@id/morning"
                        app:chipSpacingHorizontal="@dimen/default_horizontal_margin"
                        app:chipSpacingVertical="@dimen/default_vertical_margin"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/desiredDeliveryTimeLabel"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/morning"
                            style="@style/Widget.MaterialComponents.Chip.Filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:enabled="@{safeUnbox(orderViewModel.contentEnabled)}"
                            android:text="@string/morning" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/afternoon"
                            style="@style/Widget.MaterialComponents.Chip.Filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:enabled="@{safeUnbox(orderViewModel.contentEnabled)}"
                            android:text="@string/afternoon" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/evening"
                            style="@style/Widget.MaterialComponents.Chip.Filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:enabled="@{safeUnbox(orderViewModel.contentEnabled)}"
                            android:text="@string/evening" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/idc"
                            style="@style/Widget.MaterialComponents.Chip.Filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:enabled="@{safeUnbox(orderViewModel.contentEnabled)}"
                            android:text="@string/idc" />

                    </com.google.android.material.chip.ChipGroup>

                    <TextView
                        android:id="@+id/commentLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/default_horizontal_margin"
                        android:layout_marginTop="@dimen/default_vertical_margin"
                        android:text="@string/comments"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/desiredDeliveryTimeGroup" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:id="@+id/inputLayout_comment"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:enabled="@{safeUnbox(orderViewModel.contentEnabled)}"
                        android:hint="@string/prompt_comment"
                        app:layout_constraintTop_toBottomOf="@+id/commentLabel"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginTop="@dimen/default_vertical_margin"
                        android:layout_marginStart="@dimen/default_horizontal_margin"
                        android:layout_marginEnd="@dimen/default_horizontal_margin"
                        android:layout_marginBottom="@dimen/default_vertical_margin">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_comment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textLongMessage"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/button_save"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginStart="@dimen/default_horizontal_margin"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="@dimen/default_horizontal_margin"
                android:layout_marginBottom="@dimen/default_vertical_margin"
                android:text="@string/action_order"
                android:backgroundTint="@color/colorSave"
                app:cornerRadius="200dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>