<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_ordersSelector"
        android:checkableBehavior="single">
        <item android:title="@string/orders">
            <menu>
                <item
                    android:id="@+id/nav_orders"
                    android:icon="@drawable/ic_receipt_orange_24dp"
                    android:title="@string/nav_orders"/>
                <item
                    android:id="@+id/nav_all_orders"
                    android:icon="@drawable/ic_import_contacts_orange_24dp"
                    android:title="@string/nav_all_orders"/>
            </menu>
        </item>
    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_edit_profile"
                android:icon="@drawable/ic_account_circle_orange_24dp"
                android:title="@string/nav_edit_profile"/>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_orange_24dp"
                android:title="@string/nav_logout"/>
        </menu>
    </item>
</menu>